syntax = "proto2";

package packet;

option java_package = "kvd.common.packet.proto";
option java_multiple_files = true;

enum PacketType {
  HELLO = 0;
  BYE = 1;
  PING = 2;
  PONG = 3;
  PUT_INIT = 4;
  PUT_DATA = 5;
  PUT_FINISH = 6;
  PUT_COMPLETE = 7;
  GET_INIT = 8;
  GET_DATA = 9;
  GET_FINISH = 10;
  CONTAINS_REQUEST = 11;
  CONTAINS_RESPONSE = 12;
  REMOVE_REQUEST = 13;
  REMOVE_RESPONSE = 14;
  CLOSE_CHANNEL = 15;
  PUT_ABORT = 16;
  GET_ABORT = 17;
  CONTAINS_ABORT = 18;
  REMOVE_ABORT = 19;
  TX_BEGIN = 20;
  TX_COMMIT = 21;
  TX_ROLLBACK = 22;
  TX_ABORT = 23;
  TX_CLOSED = 24;
  INVALID_REQUEST = 25;
  LOCK = 26;
  ABORT = 27;
  REMOVEALL_REQUEST = 28;
}

message PutInitBody {
  optional int64 ttlMs = 1;
  optional bytes key = 2;
}

message TxBeginBody {
  optional int64 timeoutMs = 1;
}

message Packet {
  optional PacketType type = 1;
  optional int32 channel = 2;
  optional int32 tx = 3;
  oneof body {
    bytes byteBody = 10;
    PutInitBody putInit = 12;
    TxBeginBody txBegin = 13;
  }
}

